@@ -2,6 +2,7 @@
 
 * 0.1.5    UNRELEASED
 
++ Allow extra params for DAG nodes and edges (#114)
 + Remove option to mark commits (#113)
 + Customize subprocess.CalledProcessError (#108)
 
